mise a jour readme